--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thanks for contacting me | Sriram Pugalenthi</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="/logo/favicon.ico" type="image/x-icon">
     <script src="https://kit.fontawesome.com/197c0bc62c.js" crossorigin="anonymous"></script>
     <style>
